--- a/views/project.erb
+++ b/views/project.erb
@@ -3,6 +3,11 @@
 <div class="container">
   <% if @user.can_edit? %>
     <div class="pull-right" style="margin-top: 15px;">
+      <% if CheesyCommon::Config.onshape && @project.onshape_top_document %>
+        <a href="/projects/<%= @project.id %>/onshape_update" class="btn btn-info btn-small">
+          <i class="icon-white icon-refresh"></i> Import Assembly Tree from Onshape
+        </a>
+      <% end %>
       <a href="/projects/<%= @project.id %>/new_part?type=part" class="btn btn-success btn-small">
         <i class="icon-white icon-cog"></i> New Part
       </a>
