--- a/views/parts_list.erb
+++ b/views/parts_list.erb
@@ -3,7 +3,7 @@
     <th><a href="?">Part Number</a></th>
     <th><a href="?">Type</a></th>
     <% if CheesyCommon::Config.onshape %>
-      <th><a href="?sort=onshape_qty">Qty</a></th>
+      <th><a href="?sort=quantity">Qty</a></th>
     <% end %>
     <th><a href="?sort=name">Name</a></th>
     <th><a href="?sort=parent_part_id">Parent</th>
@@ -20,7 +20,7 @@
       <td><a href="/parts/<%= part.id %>"><%= part.full_part_number %></a></td>
       <td><%= part.type.capitalize %></td>
       <% if CheesyCommon::Config.onshape %>
-        <td><%= part.onshape_qty %></td>
+        <td><%= part.quantity %></td>
       <% end %>
       <td><a href="/parts/<%= part.id %>"><%= part.name %></a></td>
       <td>
