--- a/public/css/css.css
+++ b/public/css/css.css
@@ -88,13 +88,12 @@ label {
 }
 .onshape_image {
   border: 1px solid black;
-  height: 200px;
+  min-height: 200px;
   overflow: hidden;
 }
 .onshape_image img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 100%;
   height: 100%;
 }
