Add Material & Mass

--- a/views/part.erb
+++ b/views/part.erb
@@ -1,6 +1,6 @@
 <%= erb :header %>
 
-<div class="container">
+<div class="container-fluid">
   <% if @part.type == "assembly" && @user.can_edit? %>
     <div class="pull-right" style="margin-top: 15px;">
     <a href="/projects/<%= @part.project_id %>/new_part?type=part&parent_part_id=<%= @part.id %>"
@@ -40,7 +40,7 @@
           </td>
         </tr>
         <tr><td><b>Notes</b></td><td><%= (@part.notes || "").gsub("\n", "<br />") %></td></tr>
-        <% if @part.type == "part" %>
+        <% unless @part.type == "assembly" %>
           <tr><td><b>Source material</b></td><td><%= @part.source_material %></td></tr>
           <tr><td><b>Have material?</b></td><td><%= (@part.have_material == 1) ? "Yes" : "No" %></td></tr>
           <tr><td><b>Material cut length</b></td><td><%= @part.cut_length %></td></tr>
@@ -48,6 +48,9 @@
         <tr><td><b>Quantity required</b></td><td><%= @part.quantity %></td></tr>
         <tr><td><b>Drawing created?</b></td><td><%= (@part.drawing_created == 1) ? "Yes" : "No" %></td></tr>
         <tr><td><b>Priority</b></td><td><%= Part::PRIORITY_MAP[@part.priority] %></td></tr>
+        <% if CheesyCommon::Config.onshape %>
+          <tr><td><b>Mass</b></td><td><%= "%8.3f" % @part.onshape_mass rescue nil %></td></tr>
+        <% end %>
       </table>
     </div>
     <% if CheesyCommon::Config.onshape %>
