--- a/views/project.erb
+++ b/views/project.erb
@@ -1,6 +1,6 @@
 <%= erb :header %>
 
-<div class="container">
+<div class="container-fluid">
   <% if @user.can_edit? %>
     <div class="pull-right" style="margin-top: 15px;">
       <% if CheesyCommon::Config.onshape && @project.onshape_top_document %>
