--- a/views/project.erb
+++ b/views/project.erb
@@ -17,7 +17,7 @@
     </div>
   <% end %>
   <h3><b><%= @project.name %> - All Parts & Assemblies</b></h3>
-  <%= erb :parts_list, :locals => { :parts => Part.where(:project_id => @project.id).order(@part_sort, :part_number, :name) } %>
+  <%= erb :parts_list, :locals => { :parts => Part.where(:project_id => @project.id).order(@part_sort[0], @part_sort[1], @part_sort[2]) } %>
   <hr>
   <div class="row">
     <div class="span3">
