Override css cache

--- a/views/header.erb
+++ b/views/header.erb
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="//media.team254.com/homepage/icons/favicon32.png">
   <link href="/css/bootstrap.min.css" rel="stylesheet">
   <link href="/css/bootstrap-datepicker.css" rel="stylesheet">
-  <link href='/css/css.css' rel='stylesheet' type='text/css' />
+  <link href='/css/css.css?1' rel='stylesheet' type='text/css' />
   <script src="/js/jquery-1.8.3.min.js"></script>
   <script src="/js/bootstrap.min.js"></script>
   <script src="/js/bootstrap-datepicker.js"></script>
