--- a/views/part.erb
+++ b/views/part.erb
@@ -28,24 +28,48 @@
   <table class="table table-striped table-condensed table-bordered" style="width: auto;">
     <tr>
       <td><b>Project</b></td>
-      <td><a href="/projects/<%= @part.project_id %>"><%= @part.project.name %></a></td>
+      <td class="selectable"><a href="/projects/<%= @part.project_id %>"><%= @part.project.name %></a></td>
     </tr>
-    <tr><td><b>Part Number</b></td><td><%= @part.full_part_number %></td></tr>
+    <tr>
+      <td><b>Part Number</b></td>
+      <td class="selectable"><%= @part.full_part_number %></td>
+    </tr>
     <tr>
       <td><b>Status</b></td>
-      <td>
+      <td class="selectable">
         <span class="label label-status-<%= @part.status %>"><%= Part::STATUS_MAP[@part.status] %></span>
       </td>
     </tr>
-    <tr><td><b>Notes</b></td><td><%= (@part.notes || "").gsub("\n", "<br />") %></td></tr>
+    <tr>
+      <td><b>Notes</b></td>
+      <td class="selectable"><%= (@part.notes || "").gsub("\n", "<br />") %></td>
+    </tr>
     <% if @part.type == "part" %>
-      <tr><td><b>Source material</b></td><td><%= @part.source_material %></td></tr>
-      <tr><td><b>Have material?</b></td><td><%= (@part.have_material == 1) ? "Yes" : "No" %></td></tr>
-      <tr><td><b>Material cut length</b></td><td><%= @part.cut_length %></td></tr>
+      <tr>
+        <td><b>Source material</b></td>
+        <td class="selectable"><%= @part.source_material %></td>
+      </tr>
+      <tr>
+        <td><b>Have material?</b></td>
+        <td class="selectable"><%= (@part.have_material == 1) ? "Yes" : "No" %></td>
+      </tr>
+      <tr>
+        <td><b>Material cut length</b></td>
+        <td class="selectable"><%= @part.cut_length %></td>
+      </tr>
     <% end %>
-    <tr><td><b>Quantity required</b></td><td><%= @part.quantity %></td></tr>
-    <tr><td><b>Drawing created?</b></td><td><%= (@part.drawing_created == 1) ? "Yes" : "No" %></td></tr>
-    <tr><td><b>Priority</b></td><td><%= Part::PRIORITY_MAP[@part.priority] %></td></tr>
+    <tr>
+      <td><b>Quantity required</b></td>
+      <td class="selectable"><%= @part.quantity %></td>
+    </tr>
+    <tr>
+      <td><b>Drawing created?</b></td>
+      <td class="selectable"><%= (@part.drawing_created == 1) ? "Yes" : "No" %></td>
+    </tr>
+    <tr>
+      <td><b>Priority</b></td>
+      <td class="selectable"><%= Part::PRIORITY_MAP[@part.priority] %></td>
+    </tr>
   </table>
   <% if @user.can_edit? %>
     <div class="pull-right" style="margin-top: -40px;">
