--- a/views/projects.erb
+++ b/views/projects.erb
@@ -5,7 +5,7 @@
     <div class="span2">
       <h2>Projects</h2>
     </div>
-    <% if @user.can_administer? %>
+    <% if @user.can_edit? %>
       <div class="pull-right" style="margin-top: 20px;">
         <a href="/new_project" class="btn btn-success btn-small">
           <i class="icon-white icon-file"></i> New Project
