--- a/views/parts_list.erb
+++ b/views/parts_list.erb
@@ -4,7 +4,9 @@
     <th><a href="?sort=type">Type</a></th>
     <th><a href="?sort=name">Name</a></th>
     <th><a href="?sort=parent_part_id">Parent</th>
-    <th><a href="?sort=status">Status</th>
+    <% unless (CheesyCommon::Config.hide_unused_fields rescue false) %>
+      <th><a href="?sort=status">Status</th>
+    <% end %>
     <% if @user.can_edit? %>
       <th>Action</th>
     <% end %>
@@ -19,25 +21,27 @@
           <a href="/parts/<%= part.parent_part.id %>"><%= part.parent_part.name if part.parent_part%></a>
         <% end %>
       </td>
-      <td class="selectable">
-      <% if @user.can_edit? %>
-        <span class="label label-status-<%= part.status %> label-<%= part.id %>" onclick="$('.label-<%= part.id %>').hide();$('.change-status-<%= part.id %>-div').show()"><%= Part::STATUS_MAP[part.status] %></span>
-        <div class="change-status-<%= part.id %>-div" style="display: none">
-          <select name="status" class="select-status-<%= part.id %> selectpicker" style="margin-bottom: 0;">
-            <% Part::STATUS_MAP.each_pair do |key, value| %>
-              <option data-content="<span class='label label-status-<%= key %>'><%= value %></span>" value="<%= key %>"<% if part.status == key %> selected<% end %>>
-                <%= value %>
-              </option>
-            <% end %>
-          </select>
-          <a onclick="editPart(<%= part.id %>, '<%= part.name %>')" class="btn btn-success btn-small">
-            <i class="icon-white icon-check"></i>
-          </a>
-        </div>
-        <% else %>
-          <span class="label label-status-<%= part.status %>"><%= Part::STATUS_MAP[part.status] %></span>
-        <% end %>
-      </td>
+      <% unless (CheesyCommon::Config.hide_unused_fields rescue false) %>
+        <td class="selectable">
+        <% if @user.can_edit? %>
+          <span class="label label-status-<%= part.status %> label-<%= part.id %>" onclick="$('.label-<%= part.id %>').hide();$('.change-status-<%= part.id %>-div').show()"><%= Part::STATUS_MAP[part.status] %></span>
+          <div class="change-status-<%= part.id %>-div" style="display: none">
+            <select name="status" class="select-status-<%= part.id %> selectpicker" style="margin-bottom: 0;">
+              <% Part::STATUS_MAP.each_pair do |key, value| %>
+                <option data-content="<span class='label label-status-<%= key %>'><%= value %></span>" value="<%= key %>"<% if part.status == key %> selected<% end %>>
+                  <%= value %>
+                </option>
+              <% end %>
+            </select>
+            <a onclick="editPart(<%= part.id %>, '<%= part.name %>')" class="btn btn-success btn-small">
+              <i class="icon-white icon-check"></i>
+            </a>
+          </div>
+          <% else %>
+            <span class="label label-status-<%= part.status %>"><%= Part::STATUS_MAP[part.status] %></span>
+          <% end %>
+        </td>
+      <% end %>
       <% if @user.can_edit? %>
         <td>
           <a href="/parts/<%= part.id %>/edit" class="btn btn-primary btn-small">
