Add selectable filename column to parts list.

--- a/views/parts_list.erb
+++ b/views/parts_list.erb
@@ -3,13 +3,14 @@
     <th><a href="?sort=id">Part Number</a></th>
     <th><a href="?sort=type">Type</a></th>
     <th><a href="?sort=name">Name</a></th>
-    <th><a href="?sort=parent_part_id">Parent</th>
+    <th><a href="?sort=parent_part_id">Parent</a></th>
     <% unless (CheesyCommon::Config.hide_unused_fields rescue false) %>
       <th><a href="?sort=status">Status</th>
     <% end %>
     <% if @user.can_edit? %>
       <th>Action</th>
     <% end %>
+    <th>Solidworks Filename</th>
   </tr>
   <% parts.each do |part| %>
     <tr>
@@ -52,6 +53,7 @@
           </a>
         </td>
       <% end %>
+      <td class="selectable"><%= part.full_part_number %> <%= part.name %></td>
     </tr>
   <% end %>
 </table>
