Get rid of 'Solidworks Filename' column and rename 'Name' to 'Description'.

--- a/views/part.erb
+++ b/views/part.erb
@@ -35,7 +35,7 @@
       <td class="selectable"><%= @part.full_part_number %></td>
     </tr>
     <tr>
-      <td><b>Name</b></td>
+      <td><b>Description</b></td>
       <td class="selectable"><%= @part.name %></td>
     </tr>
     <tr>
